meta tag google merchant

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<meta name="google-site-verification" content="NagFq-kniaewm3xPZysh4omljUKgFgBWTOkFy4CDQrI" />
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
